# Enterprise-Databricks-Lakehouse-Platform-for-Market-Macro-Data

./: .gitignore  .pre-commit-config.yaml  00_README.md  00_platform_setup_catalog_schema.ipynb  00_setup_catalog_schema.sql.ipynb  10_bronze_ingest_crypto.py.ipynb  10_direct_bronze_market_crypto_ingest.ipynb  11_bronze_ingest_ecb_fx.ipynb  11_direct_bronze_ref_ecb_fx_ingest.ipynb  12_bronze_ingest_fred.py.ipynb  12_direct_bronze_ref_fred_ingest.ipynb  20_direct_silver_market_crypto_ohlc_transform.ipynb  20_silver_crypto_ohlc_parse.py.ipynb  22_direct_silver_ref_macro_transform.ipynb  22_silver_ref_parse.py.ipynb  30_direct_gold_market_ohlc_features_build.ipynb  30_gold_ohlc_features.sql.ipynb  32_direct_gold_market_macro_daily_build.ipynb  330_gold_market_macro_daily.sql.ipynb  3_gold_ohlc_features.sql  40_landing_producer_market_crypto_to_s3_1m.ipynb  40_observability_metrics.py.ipynb  41_crypto_bronze_loader_from_s3.ipynb  41_landing_bronze_market_crypto_load_from_s3.ipynb  43_landing_gold_market_crypto_features_build.dbquery.ipynb  50_landing_producer_ref_ecb_to_s3.ipynb  50_producer_ecb_api_to_s3.ipynb  51_landing_bronze_ref_ecb_load_from_s3.ipynb  53_landing_producer_ref_fred_to_s3.ipynb  54_fred_bronze_loader_from_s3.ipynb  54_landing_bronze_ref_fred_load_from_s3.ipynb  56_landing_gold_market_macro_daily_build.dbquery.ipynb  70_platform_observability_metrics_build.ipynb  96_validation_day6_regression_checks.dbquery.ipynb  98_adhoc_s3_sanity.ipynb  99_adhoc_sql_sanity.dbquery.ipynb  New Query 2026-02-04 12:43am.dbquery.ipynb  Untitled Notebook 2026-02-03 23_56_14.ipynb  databricks.yml  (+5 more)
(+44 files in other folders)
