[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse"
version = "0.1.0"
description = "Enterprise Databricks Lakehouse Platform"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pyspark>=3.3.0"
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-include = ["*.ipynb"]
exclude = [
  "_archive",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
