[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse"
version = "0.1.0"
description = "Enterprise Databricks Lakehouse Platform"
requires-python = ">=3.10"
dependencies = [
    "requests",
    # pyspark is intentionally NOT listed here:
    # - Databricks Runtime already bundles PySpark (version conflicts if reinstalled)
    # - CI only runs pure-Python unit tests, so pyspark is not needed there either
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff", "mypy"]
# Use 'pip install -e ".[spark]"' to run PySpark tests locally
spark = ["pyspark>=3.3.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [
  "_archive",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
